@@ -39,6 +39,7 @@
 #include "IECore/CompoundData.h" 
 #include "IECore/TypedData.h" 
 #include "IECore/SimpleTypedData.h" 
+#include "IECore/MemoryIndexedIO.h"
 
 using namespace boost;
 using namespace boost::unit_test;
@@ -125,6 +126,100 @@ struct CompoundDataTest
 			BOOST_CHECK( !"Exception thrown during creation of member." );
 		}
 	}
+
+	void testNullData()
+	{
+		CompoundDataPtr d = new CompoundData();
+		d->writable()["floatElement"] = new FloatData( 42.0f );
+		d->writable()["stringElement"] = new StringData( "cake" );
+
+		// sanity check first.
+		try
+		{
+			CompoundDataPtr dd = d->copy();
+		}
+		catch ( std::exception &e ) 
+		{
+			BOOST_CHECK( !"Exception thrown during CompoundData copy." );
+		}
+
+		CompoundDataPtr c = new CompoundData();
+		c->writable()["nullElement"] = 0;
+
+		// copy
+		try
+		{
+			CompoundDataPtr d = c->copy();
+
+			BOOST_CHECK( !"Exception not thrown during copy with invalid NULL data." );
+		}
+		catch ( std::exception &e )
+		{
+		}
+
+		// save
+		try
+		{
+			IndexedIOPtr io = new MemoryIndexedIO( NULL, IndexedIO::rootPath, IndexedIO::Write);
+			IndexedIO::EntryID entryName( "test" );
+			c->Object::save( io, entryName );
+
+			BOOST_CHECK( !"Exception not thrown during save with invalid NULL data." );
+		}
+		catch ( std::exception &e )
+		{
+		}
+		
+		// memoryUsage
+		try
+		{
+			c->Object::memoryUsage();
+		}
+		catch ( std::exception &e )
+		{
+			BOOST_CHECK( !"Exception thrown during memoryCopy with invalid NULL data." );
+		}
+
+		// isEqual
+		try
+		{
+			CompoundDataPtr c2 = new CompoundData();
+			c2->writable()["nullElement"] = 0;
+
+			bool i = c->isEqualTo( c );
+			BOOST_CHECK( i );
+
+			i = c->isEqualTo( c2 );
+			BOOST_CHECK( i );
+
+			i = c2->isEqualTo( c );
+			BOOST_CHECK( i );
+
+			i = c->isEqualTo( d );
+			BOOST_CHECK( !i );
+
+			i = d->isEqualTo( c );
+			BOOST_CHECK( !i );
+
+		}
+		catch ( std::exception &e )
+		{
+			BOOST_CHECK( !"Exception thrown during isEqual with invalid NULL data." );
+		}
+
+		// hash
+		try
+		{
+			c->Object::hash();
+
+			BOOST_CHECK( !"Exception not thrown during hash with invalid NULL data." );
+		}
+		catch ( std::exception &e )
+		{
+		}
+
+	}
+
 };
 
 
@@ -135,6 +230,7 @@ struct CompoundDataTestSuite : public boost::unit_test::test_suite
 	{
 		boost::shared_ptr<CompoundDataTest> instance( new CompoundDataTest() );
 		add( BOOST_CLASS_TEST_CASE( &CompoundDataTest::testMemberRetrieval, instance ) );
+		add( BOOST_CLASS_TEST_CASE( &CompoundDataTest::testNullData, instance ) );
 	}
 };
 
